--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
     <h1 bold>Second Live Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, exercitationem eaque velit possimus quae
+        adipisci. Officia doloremque est vero voluptate aut cum laboriosam, laborum sunt? Animi magnam minus sequi
+        corporis.</p>
+    <p>
+        <a href="http://www.google.com" target="_blank" rel="noopener noreferrer"></a>
+        <a href="http://www.facebook.com"></a>
+    </p>
 </head>
 
 <body>
